# RenderStudy

./: .gitignore  README.md  benchmark.py  benchmark2.py  benchmark3.py  benchmark_goal_regex.py  benchmark_heading.py  empty.docx  patch.diff  pyproject.toml  test_table_flush.docx
examples/: sample_report.docx  sample_report.md  sample_report.yaml  титульник.docx
src/RenderStudy/: api_server.py  api_server.py.orig  cli.py  conversion_service.py  docx_formatter.py  gost_format.py  markdown_parser.py  model.py  renderer_docx.py  telegram_bot.py  utils.py  yaml_parser.py
src/RenderStudy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api_server.py  test_cli.py  test_conversion_service.py  test_docx_formatter.py  test_gost_format.py  test_parser.py  test_perf_bot.py  test_render_basic.py  test_security_limits.py  test_telegram_bot.py  test_utils.py
