[project]
name = "RenderStudy"
version = "0.1.0"
description = "Convert Markdown to DOCX formatted per BSUIR STP 01-2024 (diploma/coursework)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Artem Golubev" }
]
dependencies = [
    "python-docx>=1.1.0",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "PyYAML>=6.0",
    "python-telegram-bot>=21.0,<22.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
]

[project.scripts]
RenderStudy = "RenderStudy.cli:main"
RenderStudyBot = "RenderStudy.telegram_bot:main"
RenderStudyAPI = "RenderStudy.api_server:main"

[project.optional-dependencies]
test = ["pytest>=7.4"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
